fixed some more layout problems, began working on README, and began commenting code

--- a/assets/baseball.css
+++ b/assets/baseball.css
@@ -44,7 +44,7 @@ h1{
     margin: 10px;
     /* display: block; */
     text-align: center;
-    /* min-width: 300px; */
+    min-width: 300px;
 
 
 }
